changes as per design

--- a/index.html
+++ b/index.html
@@ -2,43 +2,100 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>www.BestApp.in</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>www.BestApp.in</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <main>
-        <header>
-            <nav class="media">media</nav>
-            <nav class="nav"> navbar</nav>
-        </header>
-        <aside class="content">
-          <section class="left">
-            <div class="one">One</div>
-            <div class="two">two</div>
-            <div class="three">three</div>
-            <div class="four">four</div>
-          </section>
-          <section class="center">
-            <section class="top">
-              <div class="top1">top one</div>
-              <div class="top2"> top two</div>
-            </section>
-              <section class="bottom">
-            <div class="bottom1">bottom</div>
-            <div class="bottom2"> bottom</div>
-            </section>
-          </section>
-          <article>
-            <div class="article1">article1</div>
-            <div class="article2">article2</div>
-          </article>
-        </aside>
-        <footer>footer</footer>
-    </main>
+  <!-- home section start -->
+  <main class="home">
+    <header>
+      <div class="logo">
+        <h1>logo</h1>
+      </div>
+      <nav class="menu">
+        <h1>Listed menu</h1>
+      </nav>
+    </header>
+    <section class="hero">
+      <aside class="left1">
+        <h1>Content</h1>
+      </aside>
+      <aside class="left2">
+        <h1>moving image</h1>
+      </aside>
+    </section>
+  </main>
+  <!-- home section end -->
+  <!-- features section start -->
+  <section class="fea-title"><h1>APP FEATURES</h1></section>
+  <div class="features">
+      <div class="f1">
+        <h2>Feature 1</h2>
+      </div>
+      <div class="f1">
+        <h2>Feature 2</h2>
+      </div>
+      <div class="f1">
+        <h2>Feature 3</h2>
+      </div>
+  </div>
+  <!-- features section end -->
+  <!-- about section start -->
+  <div class="about">
+    <section class="abt-title"><h1>ABOUT APP</h1></section>
+    <aside class="abt1">
+      <h1>About img</h1>
+    </aside>
+    <aside class="abt2">
+      <h1>About content</h1>
+    </aside>
+  </div>
+  <!-- about section end -->
+  <!-- review section start -->
+  <div class="review">
+    <section class="rev-title"><h1>PRSON'S REVIEW</h1></section>
+    <aside class="per">
+      <h1>person 1</h1>
+    </aside>
+    <aside class="per">
+      <h1>person 2</h1>
+    </aside>
+    <aside class="per">
+      <h1>person 3</h1>
+    </aside>
+  </div>
+<!-- review section end -->
+<!-- pricing section start -->
+  <div class="pricing">
+    <section class="pri-title"><h1>OUR PRICING PLANS</h1></section>
+    <aside class="pri">
+      <h1>Basic </h1>
+    </aside>
+    <aside class="pri">
+      <h1>Standard 2</h1>
+    </aside>
+    <aside class="pri">
+      <h1>Prenium </h1>
+    </aside>
+  </div>
+  <!-- pricing section end -->
+  <!-- Contact section start -->
+  <div class="contact">
+    <aside class="cont-img">
+      <h1>contact img</h1>
+    </aside>
+    <div class="form">
+    <section class="cont-title"><h1>CONTACT US</h1></section>
+    <aside class="form-pattern">
+      <h1>Form</h1>
+    </aside>
+  </div>
+  </div>
+ <!-- Contact section end -->
 </body>
 
 </html>
