Modiefy the responsive layout of bes app web

--- a/index.html
+++ b/index.html
@@ -31,56 +31,70 @@
   </main>
   <!-- home section end -->
   <!-- features section start -->
-  <section class="fea-title"><h1>APP FEATURES</h1></section>
+  <section class="fea-title">
+    <h1>APP FEATURES</h1>
+  </section>
   <div class="features">
-      <div class="f1">
-        <h2>Feature 1</h2>
-      </div>
-      <div class="f1">
-        <h2>Feature 2</h2>
-      </div>
-      <div class="f1">
-        <h2>Feature 3</h2>
-      </div>
+    <div class="f1">
+      <h2>Feature 1</h2>
+    </div>
+    <div class="f1">
+      <h2>Feature 2</h2>
+    </div>
+    <div class="f1">
+      <h2>Feature 3</h2>
+    </div>
   </div>
   <!-- features section end -->
   <!-- about section start -->
   <div class="about">
-    <section class="abt-title"><h1>ABOUT APP</h1></section>
-    <aside class="abt1">
-      <h1>About img</h1>
-    </aside>
-    <aside class="abt2">
-      <h1>About content</h1>
-    </aside>
+    <section class="abt-title">
+      <h1>ABOUT APP</h1>
+    </section>
+    <div class="abt">
+      <aside class="abt1">
+        <h1>About img</h1>
+      </aside>
+      <aside class="abt2">
+        <h1>About content</h1>
+      </aside>
+    </div>
   </div>
   <!-- about section end -->
   <!-- review section start -->
   <div class="review">
-    <section class="rev-title"><h1>PRSON'S REVIEW</h1></section>
-    <aside class="per">
-      <h1>person 1</h1>
-    </aside>
-    <aside class="per">
-      <h1>person 2</h1>
-    </aside>
-    <aside class="per">
-      <h1>person 3</h1>
-    </aside>
+    <section class="rev-title">
+      <h1>PRSON'S REVIEW</h1>
+    </section>
+    <div class="pr-rev">
+      <aside class="per">
+        <h1>person 1</h1>
+      </aside>
+      <aside class="per">
+        <h1>person 2</h1>
+      </aside>
+      <aside class="per">
+        <h1>person 3</h1>
+      </aside>
+    </div>
   </div>
-<!-- review section end -->
-<!-- pricing section start -->
+  <!-- review section end -->
+  <!-- pricing section start -->
   <div class="pricing">
-    <section class="pri-title"><h1>OUR PRICING PLANS</h1></section>
-    <aside class="pri">
-      <h1>Basic </h1>
-    </aside>
-    <aside class="pri">
-      <h1>Standard 2</h1>
-    </aside>
-    <aside class="pri">
-      <h1>Prenium </h1>
-    </aside>
+    <section class="pri-title">
+      <h1>OUR PRICING PLANS</h1>
+    </section>
+    <div class="pri-cing">
+      <aside class="pri">
+        <h1>Basic </h1>
+      </aside>
+      <aside class="pri">
+        <h1>Standard 2</h1>
+      </aside>
+      <aside class="pri">
+        <h1>Prenium </h1>
+      </aside>
+    </div>
   </div>
   <!-- pricing section end -->
   <!-- Contact section start -->
@@ -89,13 +103,15 @@
       <h1>contact img</h1>
     </aside>
     <div class="form">
-    <section class="cont-title"><h1>CONTACT US</h1></section>
-    <aside class="form-pattern">
-      <h1>Form</h1>
-    </aside>
+      <section class="cont-title">
+        <h1>CONTACT US</h1>
+      </section>
+      <aside class="form-pattern">
+        <h1>Form</h1>
+      </aside>
+    </div>
   </div>
-  </div>
- <!-- Contact section end -->
+  <!-- Contact section end -->
 </body>
 
 </html>
